# amvo

./: .gitignore  README.md  main.py  pyproject.toml
descriptor_video/: classification.py  key_desc.py  lbp_bovw.py  lbp_classification.py  lbp_descriptor.py  lbp_vocabulary.py  stip.py
descriptors/: bow.py  bow_classifier.py  descriptor.py  descriptor_classifier.py  vlad.py
detection/: 1. CNNObjectClassification-etud.ipynb  2. CNNObjectLocalizationFeelingLucky-etud.ipynb
optical_flow/: optical_flow.ipynb
src/: VLAD_classifier.py  dataset_to_descriptor.py  descriptor.py  descriptor_classifier.py  sift.py
vocabularies_sift/: vocabulary_100.npy  vocabulary_1000.npy  vocabulary_25.npy  vocabulary_50.npy  vocabulary_500.npy  vocabulary_5000.npy  vocabulary_75.npy
