[project]
name = "amvo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pytest>=9.0.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
]
